# Surreal-Engine

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
include/: FindGLM.cmake
src/: application.cpp  camera.cpp  main.cpp  mesh.cpp
src/headers/: application.h  camera.h  mesh.h
